--- a/webapp/javascript/components/AppSelector/SelectorModal.module.scss
+++ b/webapp/javascript/components/AppSelector/SelectorModal.module.scss
@@ -8,7 +8,7 @@
   border: 1px solid var(--ps-ui-border-color);
   border-radius: 4px;
   display: none;
-  padding: 10px;
+  padding: 10px 0;
 
   &.visible {
     display: block;
@@ -28,6 +28,7 @@
 
 .sectionTitle {
   font-size: 16px;
+  margin-left: 10px;
 }
 
 .section {
@@ -42,6 +43,7 @@
   background: var(--ps-immutable-1);
   color: var(--ps-immutable-4);
   border: 1px solid var(--ps-ui-border-color);
+  margin: 10px 0 10px 10px;
 }
 
 .noData {
